--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "expo": "~38.0.8",
+    "expo-linear-gradient": "~8.2.1",
+    "expo-random": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "load-json-file": "^6.2.0",
     "react": "~16.11.0",
@@ -19,9 +21,11 @@
     "react-native-calendars": "^1.300.0",
     "react-native-card-animated-modal": "^1.0.3",
     "react-native-elements": "^2.0.4",
+    "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-keyboard-aware-view": "0.0.14",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
