--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-select-multiple": "^2.1.0",
+    "react-native-smart-timer-enhance": "^1.0.3",
+    "react-native-smart-toast": "^1.1.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
