--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-random": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "load-json-file": "^6.2.0",
+    "logkitty": "^0.7.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
