--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.9.0",
-    "write-json-file": "^4.3.0"
+    "write-json-file": "^4.3.0",
+    "expo-file-system": "~9.0.1",
+    "expo-image-picker": "~8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
