--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "expo": "~38.0.8",
+    "expo-file-system": "~9.0.1",
+    "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "~8.2.1",
     "expo-random": "~8.2.1",
     "expo-status-bar": "^1.0.2",
@@ -21,6 +23,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-calendars": "^1.300.0",
     "react-native-card-animated-modal": "^1.0.3",
+    "react-native-chart-kit": "^6.4.1",
     "react-native-elements": "^2.0.4",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "~1.6.0",
@@ -38,8 +41,7 @@
     "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.9.0",
     "write-json-file": "^4.3.0",
-    "expo-file-system": "~9.0.1",
-    "expo-image-picker": "~8.3.0"
+    "react-native-svg": "12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
