--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
+    "react-native-animated-splash-screen": "^2.0.5",
     "react-native-calendars": "^1.300.0",
     "react-native-card-animated-modal": "^1.0.3",
     "react-native-chart-kit": "^6.4.1",
@@ -36,12 +38,12 @@
     "react-native-select-multiple": "^2.1.0",
     "react-native-smart-timer-enhance": "^1.0.3",
     "react-native-smart-toast": "^1.1.1",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.9.0",
-    "write-json-file": "^4.3.0",
-    "react-native-svg": "12.1.0"
+    "write-json-file": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
