--- a/app.json
+++ b/app.json
@@ -17,6 +17,9 @@
     "ios": {
       "supportsTablet": true
     },
+    "android": {
+      "useNextNotificationsApi": true
+    },
     "web": {
       "favicon": "./assets/images/favicon.png"
     },
