--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "expo": "~38.0.8",
     "expo-file-system": "~9.0.1",
     "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "~8.2.1",
+    "expo-notifications": "~0.3.3",
     "expo-random": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "load-json-file": "^6.2.0",
@@ -26,6 +28,7 @@
     "react-native-calendars": "^1.300.0",
     "react-native-card-animated-modal": "^1.0.3",
     "react-native-chart-kit": "^6.4.1",
+    "react-native-draggable-flatlist": "^2.3.6",
     "react-native-elements": "^2.0.4",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "~1.6.0",
@@ -39,6 +42,7 @@
     "react-native-smart-timer-enhance": "^1.0.3",
     "react-native-smart-toast": "^1.1.1",
     "react-native-svg": "12.1.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
